# packetary-specs

./: .gitignore  .gitreview  AUTHORS  ChangeLog  README.md  README.rst  setup.cfg  setup.py
doc/source/: conf.py  footer.rst.template  header.rst.template
specs/: template.rst
specs/0.2.0/: build-packages.rst  spec.rst
specs/0.3.0/: dkms-to-binary-modules-rebuild.rst
tests/: test_titles.py
