[metadata]
name = packetary-specs
summary = Packetary Project Development Specs
description-file =
    README.rst
author = OpenStack
author-email = packetary-dev@lists.launchpad.net
home-page = https://wiki.openstack.org/wiki/Packetary
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
warnerrors = True

[wheel]
universal = 1
